# Inarious

./: .env  .env.dev  Dockerfile  LICENSE  README.md  database.py  docker-compose.yml  fastapi.Dockerfile  faust.Dockerfile  kafka.Dockerfile  main.py  pyproject.toml  worker-start.sh
Inarious/: config.py  faust_main.py  main.py  models.py  schemas.py
Inarious/database/arangodb/: database.py
Inarious/inarious_kafka/: producer.py
Inarious/kafka/: consumer.py  producer.py
Inarious/protobuf/: backendApiActivity.proto  backendApiActivity_pb2.py
Inarious/routers/: users.py
Inarious/schemas/arangodb/: schemas.py
assets/: diagram.py
basic_fastAPI_app/: database.py  main.py  models.py  schemas.py
docker/: docker-compose.yml
inarious/: config.py  main.py  user_consumer.py
inarious/database/arangodb/: database.py
inarious/kafka/: consumer.py  producer.py  serializer.py
inarious/pipelines/: apollo.py  artemis.py  contests.py  dfn.py  draftkings.py  migrate_msf.py  msf_live.py  mysportsfeeds.py
inarious/routers/: pg_to_mdb_pipeline.py  users.py
inarious/schemas/arangodb/: schemas.py
kafka/: consumer.py  producer.py  topic.py
